# MoleculeNet

./: .gitignore  README.md  __init__.py  setup.cfg  splitter.py  utils.py
raw/: download.sh
src/MoleculeNet/: __init__.py  splitter.py  utils.py
src/MoleculeNet/filtered/: bace.csv
