[metadata]
name = MoleculeNet
version = 0.0.1-dev
description = MoleculeNet package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = false
include_package_data = True

packages = find:
package_dir =
    = src

[options.packages.find]
where = src
